Three types of lists in Direct Message Activity configured. Deleting of dopes from Profile Overview added. Deleting of Comments under own dope added in addition to deleting of own comments